Tabbar: Fix close button alignment on 0.59.2

--- a/src/tabbar.less
+++ b/src/tabbar.less
@@ -43,8 +43,6 @@ div.tab-row-widget:before {
             height: 16px;
             background: var(--breeze-tabbar-close-normal-background);
             line-height: 1;
-            top: 50%;
-            transform: translateY(-50%);
         
             span {
                 color: var(--breeze-tabbar-close-foreground) !important;
